Update index.html favico

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport"               content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="author"                 content="Atl3m ">
+    <meta name="copyright"              content="encryptia.no © 2025 " />
+    <meta name="theme-color"            content="#070223" />
+    <meta name="identifier-url" 		content="http://www.encryptia.no/" />
+    <meta name="description" 			content="The Boan - Encryptia city hotel bar"/>
+    <!--<link rel="shortcut icon" 	href="./img/favicon.ico"/>-->
+    <link rel="icon"        href="https://files.encryptiacity.com/images/EncryptiaHotelLogo.png" sizes="32x32">
   <title>Encryptia Hotel - Room Booking</title>
 
   <!-- Bootstrap CSS -->
