--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" 			content="The Boan - Encryptia city hotel bar"/>
     <!--<link rel="shortcut icon" 	href="./img/favicon.ico"/>-->
     
-    <link rel="icon"        href="https://files.encryptiacity.com/images/EncryptiaHotelLogo.png" sizes="32x32">
+    <link rel="icon"        href="icon.png" sizes="32x32">
                     
   <title>Encryptia Hotel - Room Booking</title>
 
