--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Open Graph Meta Tags (for Facebook, LinkedIn, WhatsApp, etc.) -->
   <meta property="og:title" content="Encryptia Hotel - Room Booking">
   <meta property="og:description" content="Book your perfect stay at Encryptia Hotel with our luxurious rooms and top-notch service!">
-  <meta property="og:image" content="https://atlem.github.io/EncryptiaHotel/EncryptiaHotelPreview.png">
+ <meta property="og:image" content="https://atlem.github.io/EncryptiaHotel/EncryptiaHotelPreview.png?v=1">
   <meta property="og:url" content="https://encryptia.com/EncryptiaHotel">
   <meta property="og:type" content="website">
 
@@ -23,7 +23,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Encryptia Hotel - Room Booking">
   <meta name="twitter:description" content="Book your perfect stay at Encryptia Hotel with our luxurious rooms and top-notch service!">
-  <meta name="twitter:image" content="https://atlem.github.io/EncryptiaHotel/EncryptiaHotelPreview.png">
+  <meta name="twitter:image" content="https://atlem.github.io/EncryptiaHotel/EncryptiaHotelPreview.png?v=1">
     
     <!--<link rel="shortcut icon" 	href="./img/favicon.ico"/>-->
     <link rel="icon"        href="icon.png" sizes="32x32">
