--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <meta property="og:title" content="Encryptia Hotel - Room Booking">
 <meta property="og:description" content="Book your perfect stay at Encryptia Hotel with our luxurious rooms and top-notch service!">
-<meta property="og:image" content="https://raw.githubusercontent.com/yourusername/repository/main/EncryptiaHotelPreview.png?v=2">
+<meta property="og:image" content="https://yourwebsite.com/EncryptiaHotelPreview.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:url" content="https://atlem.github.io/EncryptiaHotel/">
 <meta property="og:url" content="https://atlem.github.io/EncryptiaHotel/">
 <meta property="og:type" content="website">
 
