--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <meta name="twitter:description" content="Book your perfect stay at Encryptia Hotel with our luxurious rooms and top-notch service!">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/yourusername/repository/main/EncryptiaHotelPreview.png?v=2">
      <!--<link rel="shortcut icon" 	href="./img/favicon.ico"/>
-    <link rel="icon"        href="icon.png" sizes="32x32">-->
+    <link rel="icon"        href="icon.png" sizes="32x32">
+       <!-- Custom Styles <link rel="stylesheet" href="styles.css">-->
+    
     <link rel="Head" href="head.html">
    
                     
@@ -30,8 +32,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
   <!-- Navigation Bar -->
