--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <!-- Custom Styles--> 
     <link rel="stylesheet" href="styles.css">
     
-    <link rel="Head" href="head.html">
-   
-                    <?php include "head.html" ?>
+    <!--link rel="Head" href="head.html"-->
   <title>Encryptia Hotel - Room Booking</title>
 
   <!-- Bootstrap CSS -->
