--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   <title>Encryptia Hotel - Room Booking</title>
 
 
-  
+    <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   
 
 </head>
@@ -171,6 +172,7 @@
 </footer>
   <!-- Bootstrap & jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <!-- Custom Script -->
   <script src="scripts.js"></script>
