--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -85,9 +85,6 @@
                     <input type="date" id="checkinDate" required>
                     <label for="checkoutDate">Check-out Date</label>
                     <input type="date" id="checkoutDate" required>
-                    <label>Extras</label>
-                    <input type="checkbox" id="breakfast" onchange="updatePrice()"> Breakfast ($10/day)<br>
-                    <input type="checkbox" id="dinner" onchange="updatePrice()"> Dinner ($20/day)
                     <h4>Total Price: <span id="totalPrice">$0</span></h4>
                     <button type="submit">Checkout</button>
                 </form>
