--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,25 +9,11 @@
     <meta name="theme-color" content="#070223" />
     <meta name="identifier-url" content="http://www.encryptia.no/" />
     <meta name="description" content="The Boan - Encryptia city hotel bar"/>
-    <meta property="og:title" content="Encryptia Hotel - Room Booking">
-    <meta property="og:description" content="Book your perfect stay at Encryptia Hotel with our luxurious rooms and top-notch service!">
-    <meta property="og:image" content="https://yourwebsite.com/EncryptiaHotelPreview.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://atlem.github.io/EncryptiaHotel/">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Encryptia Hotel - Room Booking">
-    <meta name="twitter:description" content="Book your perfect stay at Encryptia Hotel with our luxurious rooms and top-notch service!">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/yourusername/repository/main/EncryptiaHotelPreview.png?v=2">
     <link rel="icon" href="icon.png" sizes="32x32">
-    
-    <!-- Custom Styles--> 
     <link rel="stylesheet" href="styles.css">
     <title>Encryptia Hotel - Room Booking</title>
 </head>
 <body>
-    <!-- Navigation Bar -->
     <nav class="navbar">
         <a class="navbar-brand" href="#">
             <img class="logo" src="https://files.encryptiacity.com/images/EncryptiaHotelLogo.png" alt="Logo"> Encryptia Hotel
@@ -35,9 +21,8 @@
     </nav>
     <div class="background-image">
         <div class="container">
-            <!-- Image Slideshow -->
             <div class="slideshow-container">
-                <div class="slides fade">
+                <div class="slides fade active">
                     <img src="https://encryptia-learning-files.s3.eu-north-1.amazonaws.com/images/Cat_Hotel.png" alt="Hotel Image 1">
                 </div>
                 <div class="slides fade">
@@ -46,15 +31,13 @@
                 <div class="slides fade">
                     <img src="https://encryptia-learning-files.s3.eu-north-1.amazonaws.com/images/Screenshot%202025-01-07%20130413.png" alt="Hotel Image 3">
                 </div>
-                <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
-                <div class="next" onclick="plusSlides(1)">&#10095;</div>
+                <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
+                <button class="next" onclick="plusSlides(1)">&#10095;</button>
             </div>
-            <!-- Tabs Navigation -->
             <div class="tab-container">
                 <button class="tab-button active" onclick="openTab(event, 'selector')">Room Selector</button>
                 <button class="tab-button" onclick="openTab(event, 'register')">Register/Order</button>
             </div>
-            <!-- Room Selection -->
             <div class="tab-content active" id="selector">
                 <h1>Select Your Room</h1>
                 <div class="room-grid">
@@ -72,7 +55,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Register/Order Form -->
             <div class="tab-content" id="register">
                 <form id="orderForm">
                     <label for="roomSelected">Room Selected</label>
@@ -85,6 +67,9 @@
                     <input type="date" id="checkinDate" required>
                     <label for="checkoutDate">Check-out Date</label>
                     <input type="date" id="checkoutDate" required>
+                    <label>Extras</label>
+                    <input type="checkbox" id="breakfast" onchange="updatePrice()"> Breakfast ($10/day)<br>
+                    <input type="checkbox" id="dinner" onchange="updatePrice()"> Dinner ($20/day)
                     <h4>Total Price: <span id="totalPrice">$0</span></h4>
                     <button type="submit">Checkout</button>
                 </form>
