--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport"               content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="author" content="Atl3m ">
-    <meta name="copyright" content="encryptia.no © 2025 " />
-    <meta name="theme-color" content="#070223" />
-    <meta name="identifier-url" content="http://www.encryptia.no/" />
-    <meta name="description" content="The Boan - Encryptia city hotel bar"/>
-    <link rel="icon" href="icon.png" sizes="32x32">
-    <link rel="stylesheet" href="styles.css">
-    <title>Encryptia Hotel - Room Booking</title>
+    <meta name="author"                 content="Atl3m ">
+    <meta name="copyright"              content="encryptia.no © 2025 " />
+    <meta name="theme-color"            content="#070223" />
+    <meta name="identifier-url" 		content="http://www.encryptia.no/" />
+    <meta name="description" 			content="The Boan - Encryptia city hotel bar"/>
+    <!--<link rel="shortcut icon" 	href="./img/favicon.ico"/>-->
+    <link rel="icon"        href="https://files.encryptiacity.com/images/EncryptiaHotelLogo.png" sizes="32x32">
+  <title>Encryptia Hotel - Room Booking</title>
 
-<!-- Bootstrap CSS -->
+  
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   
   <!-- Custom Styles -->
@@ -61,6 +62,8 @@
       <div class="tab-pane fade show active" id="selector">
         <h1 class="text-center">Select Your Room</h1>
         <div class="row">
+
+
           <!-- Room 1 -->
           <div class="col-md-4">
             <div class="card room-card">
