--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   
   <!-- Custom Styles -->
   <link rel="stylesheet" href="styles.v2.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Navigation Bar -->
