--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <div class="card-body">
                 <h5 class="card-title">Dubble Room</h5>
                 <h5 class="card-title">$150/night</h5>
-                <button class="btn btn-select btn-block" onclick="redirectToRegister('Deluxe Room', 150)">Select</button>
+                <button class="btn btn-select btn-block" onclick="redirectToRegister('Dubble Room', 150)">Select</button>
               </div>
             </div>
           </div>
