--- a/index.html
+++ b/index.html
@@ -130,8 +130,14 @@
               </select>
             </div>
             <div class="form-group">
-              <label for="checkinDate">Check-in Date</label>
-              <input type="date" class="form-control" id="checkinDate" required>
+  <label for="checkinDate">Check-in Date</label>
+                    <input type="date" id="checkinDate" required>
+                    <label for="checkinTime">Check-in Time</label>
+                    <input type="time" id="checkinTime" required>
+                    <label for="checkoutDate">Check-out Date</label>
+                    <input type="date" id="checkoutDate" required>
+                    <label for="checkoutTime">Check-out Time</label>
+                    <input type="time" id="checkoutTime" required>
             </div>
             <div class="form-group">
               <label for="checkoutDate">Check-out Date</label>
