--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
                 <option value="5">5</option>
               </select>
             </div>
-            <div class="form-group"><label for="checkinDate">Check-in Date</label>
+            <div class="form-group"><label for="checkinDate">Check-in Date</label></div>
             <div class="form-group"><input type="date" id="checkinDate" required></div>
-            <div class="form-group"><label for="checkinTime">Check-in Time</label>
+            <div class="form-group"><label for="checkinTime">Check-in Time</label></div>
             <div class="form-group"><input type="time" id="checkinTime" required></div>
-            <div class="form-group"><label for="checkoutDate">Check-out Date</label>
+            <div class="form-group"><label for="checkoutDate">Check-out Date</label></div>
             <div class="form-group"><input type="date" id="checkoutDate" required></div>
-            <div class="form-group"><label for="checkoutTime">Checkout at -09:00-</label>
-            <div class="form-group"><label for="checkoutDate">Check-out Date</label>
-              <div class="form-group"><input type="date" class="form-control" id="checkoutDate" required>
-            </div>
+            <div class="form-group"><label for="checkoutTime">Checkout at -09:00-</label></div>
+            <div class="form-group"><label for="checkoutDate">Check-out Date</label></div>
+            <div class="form-group"><input type="date" class="form-control" id="checkoutDate" required></div>
+            
             <div class="form-group">
               <label>Extras</label><br>
               <input type="checkbox" id="breakfast" onchange="updatePrice()"> Breakfast ($10/day) <br>
