--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport"               content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="author"                 content="Atl3m ">
-    <meta name="copyright"              content="encryptia.no © 2025 " />
-    <meta name="theme-color"            content="#070223" />
-    <meta name="identifier-url" 		content="http://www.encryptia.no/" />
-    <meta name="description" 			content="The Boan - Encryptia city hotel bar"/>
+    <meta name="copyright"              content="encryptia.no © 2025 ">
+    <meta name="theme-color"            content="#070223">
+    <meta name="identifier-url" 		content="http://www.encryptia.no/">
+    <meta name="description" 			content="Encryptia Hotel - Encryptia city hotel orderingScreen">
     <!--<link rel="shortcut icon" 	href="./img/favicon.ico"/>-->
     <link rel="icon"        href="https://files.encryptiacity.com/images/EncryptiaHotelLogo.png" sizes="32x32">
   <title>Encryptia Hotel - Room Booking</title>
@@ -24,7 +24,7 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#"><img class="logo" style="width: 60px;" src="https://files.encryptiacity.com/images/EncryptiaHotelLogo.png">    Encryptia Hotel</a> 
+    <a class="navbar-brand" href="#"><img alt="logo" class="logo" style="width: 60px;" src="https://files.encryptiacity.com/images/EncryptiaHotelLogo.png">    Encryptia Hotel</a> 
   </nav>
   <div class="background-image">
   <div class="container">
