--- a/index.html
+++ b/index.html
@@ -120,14 +120,15 @@
               <input type="email" class="form-control" id="customerEmail" required>
             </div>
             <div class="form-group">
-              <label for="numPeople">Number of People</label>
-              <select class="form-control" id="numPeople" required>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-              </select>
+                 <label for="numPeople">Number of People</label>
+                    <select id="numPeople" required>
+                        <option value="" disabled selected>Select</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
             </div>
             <div class="form-group"><label for="checkinDate">Check-in Date</label></div>
             <div class="form-group"><input type="date" id="checkinDate" required></div>
