--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             <div class="form-group"><label for="checkoutDate">Check-out Date</label></div>
             <div class="form-group"><input type="date" id="checkoutDate" required></div>
             <div class="form-group"><label for="checkoutTime">Checkout at -09:00-</label></div>
+            <div class="form-group"><input type="time" id="checkoutTime" required></div>
             
             <div class="form-group">
               <label>Extras</label><br>
