--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             
             <div class="form-group">
               <label>Extras</label><br>
-              <input type="checkbox" id="breakfast" onchange="updatePrice()"> Breakfast ($10/day) <br>
-              <input type="checkbox" id="dinner" onchange="updatePrice()"> Dinner ($20/day)
+              <label for="breakfast">..</label><input type="checkbox" id="breakfast" onchange="updatePrice()"> Breakfast ($10/day) <br>
+              <label for="dinner">..</label><input type="checkbox" id="dinner" onchange="updatePrice()"> Dinner ($20/day)
             </div>
             <h4>Total Price: <span id="totalPrice">$0</span></h4>
             <button type="submit" class="btn btn-select btn-block">Checkout</button>
