--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </div>
 </div>
   <footer class="footer">
-    <a href="#">Home</a>
+    <a href="#Top">Home</a>
     <a href="#">About</a>
     <a href="#">Contact</a>
 </footer>
