--- a/admin.html
+++ b/admin.html
@@ -47,7 +47,7 @@
     <header>
         <h1>Hotel Customer List</h1>
     </header>
-    
+    <div class="background-image">
     <main>
         <section class="admin-panel">
             <table>
@@ -133,5 +133,6 @@
             </table>
         </section>
     </main>
+        </div>
 </body>
 </html>
