--- a/admin.html
+++ b/admin.html
@@ -19,6 +19,7 @@
             border-collapse: collapse;
         }
         th, td {
+            color: #ae764b;
             border: 1px solid #ddd;
             padding: 12px;
             text-align: left;
