--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,11 @@
             width: 100%;
             border-collapse: collapse;
         }
+        h1{
+            border-bottom{
+                solid 2px #ae764b;
+            }
+        }
         th, td {
             color: #ae764b;
             border: 1px solid #ddd;
@@ -25,7 +30,7 @@
             text-align: left;
         }
         th {
-            background-color: #007bff;
+            background-color: #1e1e1e;
             color: white;
         }
         tr:nth-child(even) {
