--- a/admin.html
+++ b/admin.html
@@ -18,11 +18,7 @@
             width: 100%;
             border-collapse: collapse;
         }
-        h1{
-            border-bottom{
-                solid 2px #ae764b;
-            }
-        }
+
         th, td {
             color: #ae764b;
             border: 1px solid #ddd;
@@ -50,8 +46,10 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Hotel Customer List</h1>
+    <header>  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="#"><img alt="logo" class="logo" style="width: 60px;" src="https://files.encryptiacity.com/images/EncryptiaHotelLogo.png">Encryptia Hotel Customer List   </a> 
+ </nav>
     </header>
     <div class="background-image">
     <main>
