--- a/admin.html
+++ b/admin.html
@@ -52,7 +52,7 @@
  </nav>
     </header>
     <div class="background-image">
-    <main>
+    <div class="container">
         <section class="admin-panel">
             <table>
                 <thead>
@@ -136,7 +136,7 @@
                 </tbody>
             </table>
         </section>
-    </main>
+    </div>
         </div>
 </body>
 </html>
