--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,9 @@
     <title>Hotel Admin Panel</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-
+.content{
+    background:none;
+}
         .admin-panel {
             width: 80%;
             margin: 20px auto;
