--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
     <title>Hotel Admin Panel</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-.content{
+.container{
     background:none;
 }
         .admin-panel {
