--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,7 @@
     <title>Hotel Admin Panel</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        body{margin:0;}
 .container{
     background:none;
 }
