--- a/admin.html
+++ b/admin.html
@@ -10,6 +10,7 @@
 .container{
     background:none;
 }
+        .navbar-brand{text-decoration: none;}
         .admin-panel {
             width: 80%;
             margin: 20px auto;
