--- a/admin.html
+++ b/admin.html
@@ -20,7 +20,7 @@
         }
         table {
             width: 100%;
-            border-collapse: collapse;
+            border: solid 2px #ae764b;
         }
 
         th, td {
