--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-                background-color: rgba(0, 0, 0, 0.5;
+                background-color: rgba(0, 0, 0, 0.5);
         }
         table {
             width: 100%;
