--- a/admin.html
+++ b/admin.html
@@ -76,14 +76,14 @@
                         <td><span class="checkmark">✔</span></td>
                         <td>
                             <select>
-                                <option value="yes" selected>✔ Yes</option>
-                                <option value="no">✘ No</option>
+                                <option class="crossmark" value="yes" selected>✔ Yes</option>
+                                <option class="crossmark" value="no">✘ No</option>
                             </select>
                         </td>
                         <td>
                             <select>
-                                <option value="yes" selected>✔ Yes</option>
-                                <option value="no">✘ No</option>
+                                <option class="crossmark" value="yes" selected>✔ Yes</option>
+                                <option class="crossmark" value="no">✘ No</option>
                             </select>
                         </td>
                     </tr>
@@ -93,14 +93,14 @@
                         <td><span class="crossmark">✘</span></td>
                         <td>
                             <select>
-                                <option value="yes">✔ Yes</option>
-                                <option value="no" selected>✘ No</option>
+                                <option class="crossmark" value="yes">✔ Yes</option>
+                                <option class="crossmark" value="no" selected>✘ No</option>
                             </select>
                         </td>
                         <td>
                             <select>
-                                <option value="yes">✔ Yes</option>
-                                <option value="no" selected>✘ No</option>
+                                <option class="crossmark" value="yes">✔ Yes</option>
+                                <option class="crossmark" value="no" selected>✘ No</option>
                             </select>
                         </td>
                     </tr>
@@ -110,14 +110,14 @@
                         <td><span class="checkmark">✔</span></td>
                         <td>
                             <select>
-                                <option value="yes" selected>✔ Yes</option>
-                                <option value="no">✘ No</option>
+                                <option class="crossmark" value="yes" selected>✔ Yes</option>
+                                <option class="crossmark" value="no">✘ No</option>
                             </select>
                         </td>
                         <td>
                             <select>
-                                <option value="yes" selected>✔ Yes</option>
-                                <option value="no">✘ No</option>
+                                <option class="crossmark" value="yes" selected>✔ Yes</option>
+                                <option class="crossmark" value="no">✘ No</option>
                             </select>
                         </td>
                     </tr>
@@ -127,14 +127,14 @@
                         <td><span class="crossmark">✘</span></td>
                         <td>
                             <select>
-                                <option value="yes">✔ Yes</option>
-                                <option value="no" selected>✘ No</option>
+                                <option class="crossmark" value="yes">✔ Yes</option>
+                                <option class="crossmark" value="no" selected>✘ No</option>
                             </select>
                         </td>
                         <td>
                             <select>
-                                <option value="yes">✔ Yes</option>
-                                <option value="no" selected>✘ No</option>
+                                <option class="crossmark" value="yes">✔ Yes</option>
+                                <option class="crossmark" value="no" selected>✘ No</option>
                             </select>
                         </td>
                     </tr>
