--- a/admin.html
+++ b/admin.html
@@ -76,13 +76,13 @@
                         <td><span class="checkmark">✔</span></td>
                         <td>
                             <select>
-                                <option class="crossmark" value="yes" selected>✔ Yes</option>
+                                <option class="checkmark" value="yes" selected>✔ Yes</option>
                                 <option class="crossmark" value="no">✘ No</option>
                             </select>
                         </td>
                         <td>
                             <select>
-                                <option class="crossmark" value="yes" selected>✔ Yes</option>
+                                <option class="checkmark" value="yes" selected>✔ Yes</option>
                                 <option class="crossmark" value="no">✘ No</option>
                             </select>
                         </td>
@@ -93,13 +93,13 @@
                         <td><span class="crossmark">✘</span></td>
                         <td>
                             <select>
-                                <option class="crossmark" value="yes">✔ Yes</option>
+                                <option class="checkmark" value="yes">✔ Yes</option>
                                 <option class="crossmark" value="no" selected>✘ No</option>
                             </select>
                         </td>
                         <td>
                             <select>
-                                <option class="crossmark" value="yes">✔ Yes</option>
+                                <option class="checkmark" value="yes">✔ Yes</option>
                                 <option class="crossmark" value="no" selected>✘ No</option>
                             </select>
                         </td>
@@ -110,13 +110,13 @@
                         <td><span class="checkmark">✔</span></td>
                         <td>
                             <select>
-                                <option class="crossmark" value="yes" selected>✔ Yes</option>
+                                <option class="checkmark" value="yes" selected>✔ Yes</option>
                                 <option class="crossmark" value="no">✘ No</option>
                             </select>
                         </td>
                         <td>
                             <select>
-                                <option class="crossmark" value="yes" selected>✔ Yes</option>
+                                <option class="checkmark" value="yes" selected>✔ Yes</option>
                                 <option class="crossmark" value="no">✘ No</option>
                             </select>
                         </td>
@@ -127,13 +127,13 @@
                         <td><span class="crossmark">✘</span></td>
                         <td>
                             <select>
-                                <option class="crossmark" value="yes">✔ Yes</option>
+                                <option class="checkmark" value="yes">✔ Yes</option>
                                 <option class="crossmark" value="no" selected>✘ No</option>
                             </select>
                         </td>
                         <td>
                             <select>
-                                <option class="crossmark" value="yes">✔ Yes</option>
+                                <option class="checkmark" value="yes">✔ Yes</option>
                                 <option class="crossmark" value="no" selected>✘ No</option>
                             </select>
                         </td>
