--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="https://encryptia-learning-files.s3.eu-north-1.amazonaws.com/images/Screenshot%202024-12-20%20133639.png" class="d-block w-100" alt="Hotel Image 5">
       </div> </div></div>
          <!-- Tabs -->
-    <ul class="nav1 nav-tabs mt-4" id="hotelTabs">
+    <ul class="nav nav-tabs mt-4" id="hotelTabs">
         <li class="nav-item">
           <a class="nav-link active" id="selector-tab" data-toggle="tab" href="#selector">Room Selector</a>
         </li>
